# FRCV

./: .gitignore  README.md  readme.md
CppLibraryModule/: ApriltagDetector.cpp  ApriltagDetector.h  CMakeLists.txt  RawVideoDevice.cpp  RawVideoDevice.h  library.h
FRCV/: FRCV.sln  FRCV_Frontend_Implementation.md  WebRTC_Implementation_Guide.md  httpHandler.py.txt  webrtc-test.html
FRCV/AngularProject1/: AngularProject1.esproj  CHANGELOG.md  README.md  angular.json  package-lock.json  package.json
FRCV/ConsoleApp1/: ConsoleApp1.csproj  FRCVHost.csproj  HTTPServer.cs  Program.cs  UDPServer.cs
FRCV/FRCVHost/: FRCVHost.csproj  Program.cs
FRCV/FRCVLib/: .cpp  ApriltagDetection.cpp  ApriltagDetection.h  ApriltagFilter.cpp  ApriltagFilter.h  ApriltagSink.cpp  ApriltagSink.h  CameraCalibrationFilter.cpp  CameraCalibrationFilter.h  (+113 more)
FRCVLib/: CMakeLists.txt
FRCVLib/src/: ApriltagDetection.cpp  ApriltagDetection.h  CMakeLists.txt  CameraCalibrationPipeline.cpp  CameraCalibrationPipeline.h  CameraCalibrationResult.cpp  CameraCalibrationResult.h  FRCVCore.cpp  FRCVCore.h  Frame.cpp  Frame.h  FramePool.cpp  FramePool.h  FrameSpec.cpp  FrameSpec.h  Logger.cpp  Logger.h  PreProcessor.cpp  PreProcessor.h  TRTSink.cpp  swig.i  swig_wrap.cxx
FRCVLib/src/Sinks/: ApriltagSink.cpp  ApriltagSink.h  IObjectDetectionSink.cpp  IObjectDetectionSink.h  ISink.cpp  ISink.h  RecordSink.cpp  RecordSink.h  RknnSink.cpp  RknnSink.h  TRTSink.cpp  TRTSink.h
FRCVLib/src/Sources/: CameraSource.cpp  CameraSource.h  ISource.cpp  ISource.h  ImageFileSource.cpp  ImageFileSource.h  VideoFileSource.cpp  VideoFileSource.h
KotlinModule/: build.gradle.kts  settings.gradle.kts
MainJavaModule/: build.gradle  settings.gradle
(+240 files in other folders)
